Fixed images stretching on image selector modal

--- a/src/assets/scss/components/modals/content/image-selector.scss
+++ b/src/assets/scss/components/modals/content/image-selector.scss
@@ -27,6 +27,8 @@
 
     width: 200px;
     height: 150px;
+
+    object-fit: cover;
   }
 }
 
